--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "net": "next dev -H 0.0.0.0"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.21.3",
     "jquery": "^3.7.1",
     "lucide-react": "^0.475.0",
     "next": "15.1.3",
