--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-table": "^8.21.3",
+    "jose": "^6.0.12",
     "jquery": "^3.7.1",
     "lucide-react": "^0.475.0",
     "next": "15.1.3",
