--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-table": "^8.21.3",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
+    "fuse.js": "^7.1.0",
     "jose": "^6.0.12",
     "jotai": "^2.13.1",
     "jquery": "^3.7.1",
